[ch15581] Fix update method and overflow for date modal (#2000)
* [ch15581] Fix update method and overflow for date modal

* [ch15581] Remove unused styles

--- a/app/styles/app.less
+++ b/app/styles/app.less
@@ -330,7 +330,7 @@ body.modal-open > .modal-backdrop {
 }
 
 .bootstrap-datetimepicker-widget {
-  z-index: 2000;
+  z-index: 20000 !important;
 
   .btn-primary {
     background: #000;
